@@ -95,6 +95,7 @@ extern unsigned fReturnSizeHC08;
 //extern char **fReturn;
 
 iCode *hasInchc08 (const operand *op, const iCode *ic, int osize);
+extern bool hc08_assignment_optimal;
 
 #endif
 
