@@ -2,6 +2,12 @@
 
 	* src/hc08/ralloc2.cc,
 	  src/hc08/gen.c:
+	  Fixes for the cost function (reducing code size and exposing code generation issues).
+
+2012-04-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/hc08/ralloc2.cc,
+	  src/hc08/gen.c:
 	  Made hc08 code generation more robust wrt. surviving registers and register operands.
 
 2012-04-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
